--- a/TP1/Dockerfile
+++ b/TP1/Dockerfile
@@ -1,9 +1,13 @@
-FROM ubuntu:latest
-LABEL maintainer = "TPVR"
-RUN apt-get update && apt-get upgrade -y
-RUN apt-get install nginx -y
-EXPOSE 8888
-VOLUME [ "/home/output" ]
-CMD ["nginx","-g","daemon off;"]
+FROM ubuntu
 
+MAINTAINER GrupoX <pg41840@uminho.pt>
 
+RUN apt-get update
+
+RUN apt-get install -y nginx && apt-get clean
+
+EXPOSE 80
+
+ENTRYPOINT ["/usr/sbin/nginx"]
+
+CMD ["start”, “-g"]
